--- a/.github/workflows/UpdateReadme.yml
+++ b/.github/workflows/UpdateReadme.yml
@@ -83,7 +83,7 @@ jobs:
        curl -L -o artifact.zip -H "Authorization: token ${{ secrets.BUILD_TAGGING_ACCESS_TOKEN }}" "$artifact_url"
        unzip_output=$(unzip -Z1 artifact.zip)
        echo  "Unzip Output :$unzip_output"
-       IFS='-.' read -a parts <<< "$(echo "$unzip_output" | grep -oP '\d+\.\d+\.\d+-\K[^.]+' | head -1)"
+       IFS='.-' read -a parts <<< "$(echo "$unzip_output" | grep -oP '\d+\.\d+\.\d+(-[^.]+){2}' | head -1)"
        package_version="${parts[0]}.${parts[1]}.${parts[2]}-${parts[3]}"
        release_number="${parts[4]}"
        package_name=$(echo "$unzip_output" | grep -Eo '^[^.]+' | head -1)
