--- a/.github/workflows/UpdateReadme.yml
+++ b/.github/workflows/UpdateReadme.yml
@@ -82,10 +82,10 @@ jobs:
        echo "Artifact URL: $artifact_url"
        curl -L -o artifact.zip -H "Authorization: token ${{ secrets.BUILD_TAGGING_ACCESS_TOKEN }}" "$artifact_url"
        unzip_output=$(unzip -Z1 artifact.zip)
-       echo  "Unzip Output :$unzip_output"
-       IFS='.-' read -a parts <<< "$(echo "$unzip_output" | grep -oP '\d+\.\d+\.\d+(-[^.]+){2}' | head -1)"
-       package_version="${parts[0]}.${parts[1]}.${parts[2]}-${parts[3]}"
-       release_number="${parts[4]}"
+       echo  "Unzip Output : $unzip_output"
+       version_string=$(echo "$unzip_output" | grep -Eo '\d+\.\d+\.\d+(-[^.]+){2}' | head -1)
+       package_version=$(echo "$version_string" | sed -E 's/(-[^.]+)$//')
+       release_number=$(echo "$version_string" | grep -Eo '\d{12}' | head -1)
        package_name=$(echo "$unzip_output" | grep -Eo '^[^.]+' | head -1)
        echo "PACKAGE_NAME=$package_name" >> $GITHUB_ENV
        echo "PACKAGE_VERSION=$package_version" >> $GITHUB_ENV
