--- a/.github/workflows/UpdateReadme.yml
+++ b/.github/workflows/UpdateReadme.yml
@@ -83,9 +83,11 @@ jobs:
        curl -L -o artifact.zip -H "Authorization: token ${{ secrets.BUILD_TAGGING_ACCESS_TOKEN }}" "$artifact_url"
        unzip_output=$(unzip -Z1 artifact.zip)
        echo  "Unzip Output : $unzip_output"
-       version_string=$(echo "$unzip_output" | grep -Eo '\d+\.\d+\.\d+(-[^.]+){2}' | head -1)
-       package_version=$(echo "$version_string" | sed -E 's/(-[^.]+)$//')
-       release_number=$(echo "$version_string" | grep -Eo '\d{12}' | head -1)
+       full_version_string=$(echo "$unzip_output" | grep -Eo '\d+\.\d+\.\d+(-[^.]+){1}' | head -1)
+       package_version=$(echo "$full_version_string" | sed -E 's/^.*?(\d+\.\d+\.\d+).*$/\1/')
+       release_number=$(echo "$full_version_string" | grep -Eo '-\D*(\d+)' | head -1 | sed 's/-\D*//')
+       echo "Package Version: $package_version"
+       echo "Release Number: $release_number"
        package_name=$(echo "$unzip_output" | grep -Eo '^[^.]+' | head -1)
        echo "PACKAGE_NAME=$package_name" >> $GITHUB_ENV
        echo "PACKAGE_VERSION=$package_version" >> $GITHUB_ENV
