--- a/.github/workflows/UpdateReadme.yml
+++ b/.github/workflows/UpdateReadme.yml
@@ -84,10 +84,12 @@ jobs:
        unzip_output=$(unzip -Z1 artifact.zip)
        echo  "Unzip Output : $unzip_output"
        full_version_string=$(echo "$unzip_output" | grep -Eo '\d+\.\d+\.\d+(-[^.]+){1}' | head -1)
+       echo "Full Version String: $full_version_string"
        package_version=$(echo "$full_version_string" | sed -E 's/(-[^.]+)$//')
-       release_number=$(echo "$full_version_string" | grep -Eo '\d{12}' | head -1)
        echo "Package Version: $package_version"
+       release_number=$(echo "$full_version_string" | grep -Eo '\d{12}' | head -1)
        echo "Release Number: $release_number"
+
        package_name=$(echo "$unzip_output" | grep -Eo '^[^.]+' | head -1)
        echo "PACKAGE_NAME=$package_name" >> $GITHUB_ENV
        echo "PACKAGE_VERSION=$package_version" >> $GITHUB_ENV
