--- a/.github/workflows/UpdateReadme.yml
+++ b/.github/workflows/UpdateReadme.yml
@@ -77,24 +77,26 @@ jobs:
 
     - name: Download artifact from the last successful run
       run: |
-       api_response=$(curl -s -H "Accept: application/vnd.github+json" -H "Authorization: token ${{ secrets.BUILD_TAGGING_ACCESS_TOKEN }}" "https://api.github.com/repos/$TARGET_REPO/actions/runs/$LAST_SUCCESSFUL_RUN_ID/artifacts")
-       echo "API Response: $api_response"
-       artifact_url=$(echo "$api_response" | jq -r '.artifacts[] | select(.name=="NuGetPackage") | .archive_download_url')
-       echo "Artifact URL: $artifact_url"
-       curl -L -o artifact.zip -H "Authorization: token ${{ secrets.BUILD_TAGGING_ACCESS_TOKEN }}" "$artifact_url"
-       unzip_output=$(unzip -Z1 artifact.zip)
-       echo  "Unzip Output : $unzip_output"
-       full_version_string=$(echo "$unzip_output" | grep -Eo '\d+\.\d+\.\d+-[^.]+')
-       echo "Full Version String: $full_version_string"
-       package_version=$(echo "$full_version_string" | sed -E 's/(-[^.]+)$//')
-       echo "Package Version: $package_version"
-       release_number=$(echo "$full_version_string" | grep -Eo '\d{12}' | head -1)
-       echo "Release Number: $release_number"
-       package_name=$(echo "$unzip_output" | grep -Eo '^[^.]+' | head -1)
-       echo "PACKAGE_NAME=$package_name" >> $GITHUB_ENV
-       echo "PACKAGE_VERSION=$package_version" >> $GITHUB_ENV
-       echo "RELEASE_NUMBER=$release_number" >> $GITHUB_ENV
-      shell: bash
+        api_response=$(curl -s -H "Accept: application/vnd.github+json" -H "Authorization: token ${{ secrets.BUILD_TAGGING_ACCESS_TOKEN }}" "https://api.github.com/repos/$TARGET_REPO/actions/runs/$LAST_SUCCESSFUL_RUN_ID/artifacts")
+        echo "API Response: $api_response"
+        artifact_url=$(echo "$api_response" | jq -r '.artifacts[] | select(.name=="NuGetPackage") | .archive_download_url')
+        echo "Artifact URL: $artifact_url"
+        curl -L -o artifact.zip -H "Authorization: token ${{ secrets.BUILD_TAGGING_ACCESS_TOKEN }}" "$artifact_url"
+        unzip_output=$(unzip -Z1 artifact.zip)
+        echo  "Unzip Output :$unzip_output"
+        full_version_string=$(echo "$unzip_output" | grep -Eo '\d+\.\d+\.\d+(-[^.]+)?')
+        echo "Full Version String: $full_version_string"
+
+        package_version=$(echo "$full_version_string" | sed -E 's/(-[^.]+)$//')
+        echo "Package Version: $package_version"
+
+        release_number=$(echo "$full_version_string" | grep -Eo '\d{12}' | head -1)
+        echo "Release Number: $release_number"
+        package_name=$(echo "$unzip_output" | grep -Eo '^[^.]+' | head -1)
+        echo "PACKAGE_NAME=$package_name" >> $GITHUB_ENV
+        echo "PACKAGE_VERSION=$package_version" >> $GITHUB_ENV
+        echo "RELEASE_NUMBER=$release_number" >> $GITHUB_ENV
+
 
 
 
