--- a/.github/workflows/UpdateReadme.yml
+++ b/.github/workflows/UpdateReadme.yml
@@ -84,10 +84,9 @@ jobs:
         curl -L -o artifact.zip -H "Authorization: token ${{ secrets.BUILD_TAGGING_ACCESS_TOKEN }}" "$artifact_url"
         unzip_output=$(unzip -Z1 artifact.zip)
         echo  "Unzip Output :$unzip_output"
-        package_name=$(echo "unzip_output" | grep -Eo '^[^\.]+')
-        $package_version=$(echo "unzip_output" | grep -Eo '\d+\.\d+\.\d+(-[^.]+)?' | sed -E 's/(-[^.]+)$//')
-        release_number=$(echo "unzip_output" | grep -Eo '\d{12}')
-
+        package_name=$(echo "$unzip_output" | grep -Eo '^[^\.]+')
+        package_version=$(echo "$unzip_output" | grep -Eo '\d+\.\d+\.\d+(-[^.]+)?' | sed -E 's/(-[^.]+)$//')
+        release_number=$(echo "$unzip_output" | grep -Eo '\d{12}')
 
         #full_version_string=$(echo "$unzip_output" | grep -Eo '\d+\.\d+\.\d+(-[^.]+)?')
         echo "Full Version String: $package_name"
