--- a/.github/workflows/AvroFusionGenerator.yml
+++ b/.github/workflows/AvroFusionGenerator.yml
@@ -45,20 +45,10 @@ on:
 
 jobs:
 
-  build:
-    name: Build ${{ matrix.configuration }}
-    strategy:
-      matrix:
-        configuration: [Release]
-
+  prepare:
     runs-on: ubuntu-latest
-
-    env:
-      Solution_Name: AvroFusionGenerator.sln
-      Project_Name: AvroFusionGenerator
-      Project_Directory: AvroFusionSource/AvroFusionGenerator
-      Pipeline_Token: ${{ secrets.BUILD_TAGGING_ACCESS_TOKEN }}
-
+    outputs:
+      new_version: ${{ steps.increment_version.outputs.new_version }}
 
     steps:
     - name: Checkout
@@ -66,17 +56,42 @@ jobs:
       with:
         fetch-depth: 0
 
-    # Install the .NET 7 SDK
+    - name: Increment version
+      id: increment_version
+      run: |
+        LATEST_TAG=$(git describe --tags --abbrev=0)
+        IFS='.' read -ra VERSION_PARTS <<< "${LATEST_TAG#v}"  
+        MAJOR=${VERSION_PARTS[0]}
+        MINOR=${VERSION_PARTS[1]}
+        PATCH=${VERSION_PARTS[2]%-*}
+        NEW_PATCH=$((PATCH + 1))
+        
+        NEW_VERSION="v$MAJOR.$MINOR.$NEW_PATCH-beta"
+        echo "new_version=$NEW_VERSION" | tee -a $GITHUB_ENV
+        echo "::set-output name=new_version::$NEW_VERSION"
+
+  build:
+    needs: prepare
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        configuration: [Release]
+
+    env:
+      Solution_Name: AvroFusionGenerator.sln
+      Project_Name: AvroFusionGenerator
+      Project_Directory: AvroFusionSource/AvroFusionGenerator
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+
     - name: Install .NET 7 SDK
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 7.0.x
-    - name: Install jq
-      run: sudo apt-get install jq
-
-    - name: Increment version suffix
-      run: |
-        echo "VersionSuffix=$(date +%y%m%d%H%M%S)" >> $GITHUB_ENV
 
     - name: Restore dependencies
       run: dotnet restore
@@ -88,19 +103,26 @@ jobs:
         Configuration: ${{ matrix.configuration }}
       shell: bash
 
-
-    # Create the app package by building and packaging the Windows Application Packaging project
     - name: Create the app package
       run: dotnet msbuild ${{ env.Project_Directory }}/${{ env.Project_Name }}.csproj /p:Configuration=${{ matrix.configuration }} /t:Publish
       shell: bash
-    
+
+  publish:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+
     - name: Create NuGet package
       run: dotnet pack --configuration Release
       working-directory: AvroFusionSource/AvroFusionGenerator
 
     - name: List NuGet package file
       run: ls -R AvroFusionSource/AvroFusionGenerator/nupkg/
-
 
     - name: Publish NuGet package
       uses: actions/upload-artifact@v2
@@ -109,48 +131,42 @@ jobs:
         path: AvroFusionSource/AvroFusionGenerator/nupkg/*.nupkg
         if-no-files-found: warn
 
-    
-    - name: Create GITHUB_OUTPUT file
+  tag:
+    needs: publish
+    runs-on: ubuntu-latest
+    env:
+      Pipeline_Token: ${{ secrets.BUILD_TAGGING_ACCESS_TOKEN }}
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+
+    - name: Set up Git
       run: |
-        echo "GITHUB_OUTPUT=${{ runner.temp }}/github_output.env" >> $GITHUB_ENV
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
 
-    - name: Get latest commit short hash
-      run: echo "short_hash=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
-      
-    - name: Get total number of commits on main branch
-      run: echo "commit_count=$(git rev-list --count HEAD)" >> $GITHUB_OUTPUT
-
-    - name: Use output values
+    - name: Get new version from prepare job
+      id: get_new_version
       run: |
-        source <(cat $GITHUB_OUTPUT)
-        build_number=$(($commit_count + 1))
-        release_number="1.0.$build_number"
-        echo "Build number: $build_number"
-        echo "Release number: $release_number"
-      shell: bash
-      
-    
-    - name: Create Git tag
+        NEW_VERSION="${{ needs.prepare.outputs.new_version }}"
+        echo "New version: $NEW_VERSION"
+        echo "::set-output name=new_version::$NEW_VERSION"
+
+    - name: Create and push Git tag
       run: |
-       git config --local user.email "action@github.com"
-       git config --local user.name "GitHub Action"
-       git tag "v${release_number}-b${build_number}-g${short_hash}-r${{ github.run_id }}-d${current_date_time}"
-       git push https://${{ secrets.BUILD_TAGGING_ACCESS_TOKEN }}@github.com/${{ github.repository }}.git --tags
-      shell: bash
+        git tag ${{ steps.get_new_version.outputs.new_version }}
+        git push https://${{ env.Pipeline_Token }}@github.com/${{ github.repository }}.git --tags
 
+  cleanup:
+    needs: [prepare, build, publish, tag]
+    runs-on: ubuntu-latest
 
-    - name: Set version number output
-      run: echo "version_number=1.0.0" >> $GITHUB_OUTPUT
-
-    - name: Set release number output
-      run: echo "release_number=100" >> $GITHUB_OUTPUT
-
-    - name: Use version and release numbers
-      run: |
-        source <(cat $GITHUB_OUTPUT)
-        echo "The version number is: $version_number"
-        echo "The release number is: $release_number"
-      shell: bash
+    steps:
+    - name: Cleanup artifacts
+      run: echo "Perform cleanup tasks here"
 
 
 
