--- a/.github/workflows/UpdateReadme.yml
+++ b/.github/workflows/UpdateReadme.yml
@@ -138,4 +138,5 @@ jobs:
         git config --local user.name "GitHub Action"
         git add README.md
         git commit -m "Update README.md"
+        git pull --rebase
         git push
